comment out optimizeLegibility for now (fixes weird rating wrapping in WebKit)

--- a/hearth/media/css/site.styl
+++ b/hearth/media/css/site.styl
@@ -7,7 +7,7 @@
 * {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    text-rendering: optimizeLegibility;
+    //text-rendering: optimizeLegibility;
     word-wrap: break-word;
 }
 
